fix panel__actions items alignment fix header getting class no-overflow instead of overflow-hidden fix scroll sticky mode header's height calculation add scroll-padding-block-start style property to document in case of any sticky mode, to prevent browser from hidding scrollable elements behind the header

--- a/_headerFW.scss
+++ b/_headerFW.scss
@@ -309,7 +309,7 @@ $z_header: 100 !default;
     span{font-size: 1.35em;font-style: italic; font-weight: 300;}
     .chevron{opacity: 0.35;}
   }
-  .panel__actions{margin: auto 0 0; display: flex; align-items: center; position: sticky; bottom: 0; background: inherit;
+  .panel__actions{margin: auto 0 0; display: flex; position: sticky; bottom: 0; background: inherit;
     >*{flex-grow: 1; flex-basis: 0;}
     .back{background: rgba(0,0,0,0.5); color:white; padding: 0.8em 1.75em 1em; display: flex; justify-content: center;align-items: center; cursor: pointer;
       span{line-height: 1; font-size: 1.35em ; font-weight: 300; font-style: italic;}
